[gd_scene load_steps=15 format=3 uid="uid://bgrnyakmgghyq"]

[ext_resource type="Script" uid="uid://bxxt4jkxn55ob" path="res://Assets/models/journal_root.gd" id="1_47kpb"]
[ext_resource type="Script" uid="uid://12xwkrptykvs" path="res://Assets/models/journal_show_inventory.gd" id="1_jth6w"]
[ext_resource type="PackedScene" uid="uid://ctxn4d5hysbqv" path="res://Assets/models/bookflip_model.tscn" id="2_7ovfm"]
[ext_resource type="Script" uid="uid://wi8scqg3b40v" path="res://Assets/models/inventory_items.gd" id="3_7ovfm"]
[ext_resource type="Texture2D" uid="uid://b10xkyr1i6p24" path="res://Assets/JournalTextures/olivia_backpack.png" id="4_e2q15"]
[ext_resource type="Material" uid="uid://dlhvvfgrqs5ib" path="res://Assets/Shaders/LightUpShader.tres" id="6_0upgx"]
[ext_resource type="Script" uid="uid://b8bi3jgsmswia" path="res://Assets/models/hide_inventory_area.gd" id="7_xwflh"]
[ext_resource type="PackedScene" uid="uid://xoifv6ugs47r" path="res://new_book_static.tscn" id="9_8c4l8"]

[sub_resource type="ViewportTexture" id="ViewportTexture_0upgx"]
viewport_path = NodePath("Armature/Skeleton3D/AnimatableBody3D/Cube_004/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_e2q15"]
viewport_path = NodePath("Armature/Skeleton3D/AnimatableBody3D2/Cube_005/SubViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_rss8h"]
size = Vector3(8.8883, 0.300507, 3.58045)

[sub_resource type="PlaneMesh" id="PlaneMesh_ngl8b"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_47kpb"]
transparency = 1
albedo_texture = ExtResource("4_e2q15")

[sub_resource type="BoxShape3D" id="BoxShape3D_47kpb"]
size = Vector3(7.30997, 0.285156, 2.29163)

[node name="BookflipBody" type="Node3D" node_paths=PackedStringArray("bookflip", "static_page") groups=["journal"]]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_47kpb")
bookflip = NodePath("bookflip")
static_page = NodePath("new_book_static/Page animate R")

[node name="Sounds" type="Node" parent="."]

[node name="ShowInventorySound" type="FmodEventEmitter2D" parent="Sounds"]
event_name = "event:/000_SFX/300_UI/311_SFX_UI_BagOpen"
event_guid = "{5d531e04-a10a-46f9-8522-9d0137defd96}"
volume = 0.5
unique_name_in_owner = true

[node name="HideInventorySound" type="FmodEventEmitter2D" parent="Sounds"]
event_name = "event:/000_SFX/300_UI/310_SFX_UI_BagClose"
event_guid = "{69c3d9f1-cb46-4217-817c-0a5e223ab1e1}"
volume = 0.5
unique_name_in_owner = true

[node name="JournalOpenSound" type="FmodEventEmitter2D" parent="Sounds"]
event_name = "event:/000_SFX/300_UI/302_SFX_UI_JournalOpen"
event_guid = "{30f0e84f-546b-4951-8546-610e533ebe87}"
attached = false
volume = 0.5
unique_name_in_owner = true

[node name="JournalCloseSound" type="FmodEventEmitter2D" parent="Sounds"]
event_name = "event:/000_SFX/300_UI/301_SFX_UI_JournalClose"
event_guid = "{9355ad2b-58c5-4861-8f53-fe56b2894e62}"
attached = false
volume = 0.5
unique_name_in_owner = true

[node name="JournalMusic" type="FmodEventEmitter3D" parent="Sounds"]
event_name = "event:/900_MX/Journal Music"
event_guid = "{bf365bef-0e83-47ed-9c13-76896f23b8d3}"
attached = false
volume = 0.2
unique_name_in_owner = true

[node name="MusicTimer" type="Timer" parent="Sounds/JournalMusic"]
unique_name_in_owner = true
wait_time = 25.0
one_shot = true

[node name="bookflip" parent="." instance=ExtResource("2_7ovfm")]
transform = Transform3D(-0.8, 0, -1.20797e-07, 0, 0.8, 0, 1.20797e-07, 0, -0.8, -0.00238484, 0.0737534, -0.0990923)
viewport_texture1 = SubResource("ViewportTexture_0upgx")
viewport_texture2 = SubResource("ViewportTexture_e2q15")

[node name="Skeleton3D" parent="bookflip/new_book_animated/Armature" index="0"]
bones/0/position = Vector3(2.688972e-19, 0.06413985, 0)
bones/0/rotation = Quaternion(0, 1.1920929e-07, 0, 1)
bones/1/rotation = Quaternion(0, 0, 0, 1)
bones/2/rotation = Quaternion(0, 0, 0, 1)
bones/3/rotation = Quaternion(0, 0, 0, 1)

[node name="ShowInventoryArea" type="Area3D" parent="." node_paths=PackedStringArray("inventory_items_container", "journal_root")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.267168, -1.16783e-08)
collision_layer = 9
script = ExtResource("1_jth6w")
inventory_items_container = NodePath("../InventoryItems")
journal_root = NodePath("..")

[node name="ShowInventoryCollider" type="CollisionShape3D" parent="ShowInventoryArea"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.0318329, -0.302822, 1.86828)
shape = SubResource("BoxShape3D_rss8h")
debug_color = Color(0.784314, 0, 0.0745098, 1)

[node name="InventoryItems" type="Node3D" parent="." node_paths=PackedStringArray("bookflip_instance")]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, -0.00238484, 0.575661, 1.71238)
script = ExtResource("3_7ovfm")
bookflip_instance = NodePath("../bookflip")

[node name="BackpackBackground" type="MeshInstance3D" parent="."]
transform = Transform3D(2.65118, 0, 0, 0, 3, 0, 0, 0, 2.83896, 0, 0.0441817, 0.789593)
material_overlay = ExtResource("6_0upgx")
cast_shadow = 0
mesh = SubResource("PlaneMesh_ngl8b")
surface_material_override/0 = SubResource("StandardMaterial3D_47kpb")

[node name="HideInventoryArea" type="Area3D" parent="." node_paths=PackedStringArray("inventory_items_container", "journal_root")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.172886, -1.57865)
collision_layer = 9
script = ExtResource("7_xwflh")
inventory_items_container = NodePath("../InventoryItems")
journal_root = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HideInventoryArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0427938, -0.383002, 0.340784)
shape = SubResource("BoxShape3D_47kpb")
debug_color = Color(0.0663742, 0.326824, 0.926759, 0.42)

[node name="new_book_static" parent="." instance=ExtResource("9_8c4l8")]
transform = Transform3D(-3.4969112e-08, 0, 0.8, 0, 0.8, 0, -0.8, 0, -3.4969112e-08, -0.00238484, 0.13023275, -0.099092305)
visible = false

[connection signal="timeout" from="Sounds/JournalMusic/MusicTimer" to="." method="_on_music_timer_timeout"]
[connection signal="tree_entered" from="ShowInventoryArea" to="ShowInventoryArea" method="_on_tree_entered"]

[editable path="bookflip"]
[editable path="bookflip/new_book_animated"]
[editable path="new_book_static"]
